--- a/Vidly/Views/Movies/_MoviesList.cshtml
+++ b/Vidly/Views/Movies/_MoviesList.cshtml
@@ -1,7 +1,6 @@
-﻿@model Vidly.Models.Movie
+﻿@*@model Vidly.Models.Movie
 
 
-    <tbody>
         <tr>
             <td>
                 @Html.ActionLink(Model.Name, "Edit", new { Id = Model.Id })
@@ -9,5 +8,4 @@
             <td>
                 <p>@Model.Genre.Name</p>
             </td>
-        </tr>
-    </tbody>
+        </tr>*@
