--- a/Vidly/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Vidly/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly.Models.ExternalLoginConfirmationViewModel
+﻿@model Vidly.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
@@ -24,6 +24,22 @@
             @Html.ValidationMessageFor(m => m.UserName)
         </div>
     </div>
+     <div class="form-group">
+        @Html.LabelFor(m => m.DrivingLicense, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.DrivingLicense, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.DrivingLicense)
+        </div>
+    </div>
+    
+    <div class="form-group">
+        @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.PhoneNumber)
+        </div>
+    </div>    
+    
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
