--- a/Vidly/Views/Movies/Movies.cshtml
+++ b/Vidly/Views/Movies/Movies.cshtml
@@ -3,6 +3,10 @@
     ViewBag.Title = "Movies";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@*JSModel and Controller*@
+<script src="~/Scripts/Model/MovieModel.js"></script>
+<script src="~/Scripts/Controller/MovieController.js"></script>
+
 
 <h2>Movies</h2>
 
@@ -18,24 +22,30 @@
         }
 
         @if (Model.Count() > 0)
-        {
-            <table class="table table-striped table-hover ">
-                <thead>
-                    <tr>
-                        <th>Movie</th>
-                        <th>Genre</th>
-                    </tr>
-                </thead>
+{
+    <table id="movies" class="table table-striped table-hover ">
+        <thead>
+            <tr>
+                <th>Movie</th>
+                <th>Genre</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+            @*Only make the table skeleton for dataTables*@
 
-                @foreach (var item in Model)
-                {
-                    @Html.Partial("_MoviesList", item)
-                }
-            </table>
-        }
+            @*@foreach (var item in Model)
+            {
+                @Html.Partial("_MoviesList", item)
+            }*@
+        </tbody>
+
+
+    </table>
+}
 
 
 
-       
+
     </div>
 </div>
