--- a/Vidly/Views/Shared/_Layout.cshtml
+++ b/Vidly/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+    @*Add Jquery*@
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 </head>
 <body>
 
@@ -23,6 +25,10 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/datatables")
     @RenderSection("scripts", required: false)
+
+
+
 </body>
 </html>
