--- a/Vidly/Content/Site.css
+++ b/Vidly/Content/Site.css
@@ -17,7 +17,8 @@ textarea {
 }
 
 /* styles for validation helpers */
-.field-validation-error {
+.field-validation-error, 
+label.error{
     color: #b94a48;
 }
 
@@ -25,7 +26,8 @@ textarea {
     display: none;
 }
 
-input.input-validation-error {
+input.input-validation-error,
+input.error {
     border: 1px solid #b94a48;
 }
 
