--- a/Vidly/Views/Shared/_Layout.cshtml
+++ b/Vidly/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/datatables")
+    @Scripts.Render("~/bundles/typeahead")
+    @Scripts.Render("~/bundles/toastr")
+    
     @RenderSection("scripts", required: false)
 
 
