--- a/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Views/Shared/_NavBar.cshtml
@@ -13,6 +13,7 @@
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Customers", "GetCustomers", "Customers")</li>
                 <li>@Html.ActionLink("Movies", "GetMovies", "Movies")</li>
+                <li>@Html.ActionLink("Rentals", "New", "Rentals")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
